fix researcher field pictures

--- a/eresearch-presentation/eresearch-presentation.org
+++ b/eresearch-presentation/eresearch-presentation.org
@@ -26,6 +26,7 @@ Jake Faulkner
 ** Cybershake New Zealand
 #+REVEAL_HTML: <iframe height="600" width="800" src="https://www.youtube.com/embed/P7t2u61daPg?si=lIqavPHDV0hXl-Gu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 ** Researcher Outputs
+#+ATTR_HTML: :height 600px
 [[file:researcher.png]]
 ** Big Picture
 #+ATTR_REVEAL: :frag (fade-in)
